--- a/res/drawable/button_pressed.xml
+++ b/res/drawable/button_pressed.xml
@@ -3,8 +3,8 @@
 	        android:shape="rectangle">
 	    <gradient
 	       android:angle="270"
-	       android:startColor="@color/button_color_dark"
-	       android:endColor="@color/button_color_light"
+	       android:startColor="@color/list_item_pressed_color_dark"
+	       android:endColor="@color/list_item_pressed_color_light"
 	    />
 	        <stroke android:color="@color/button_focused_border" android:width="2dip" />
 	    <padding android:left="8dip" android:top="8dip" android:right="8dip" android:bottom="8dip" />
